--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
     <style>
+        /* header::before{
+            
+            background: url('https://source.unsplash.com/random/900×700/?fruit') no-repeat center center/cover;
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            z-index: -1;
+            opacity: 0.4;
+
+        } */
         *{
             margin: 0px;
             padding: 0px;
@@ -96,7 +109,7 @@
         /* height: 600px; */
         /* border: 2px solid rgb(17, 13, 13); */
         /* border-radius: 40px; */
-        background-image: url(./PicsArt_03-23-09.23.52\ \(1\).jpg);
+        background: url('https://source.unsplash.com/random/900×700/?fruit')no-repeat center center/cover ;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100%;
