--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </div>
         <div class="onlin">
           <h2>Internship</h2>
-          <h3 class="o">6 Month Experians</h3> 
+          <h3 class="o">6 Month Experience</h3> 
           <h3 class="o"> MERN Stack</h3> 
            <h3 class="o">MCA running(80%) </h3>
            <h3 class="o"></h3>
